--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="particles-js">
 
 <a href="#" class="project" >projects</a>
-<a href="#" class="about animate__backInLeft" >about</a>
+<a href="#" class="about animate__animated animate__backInLeft" >about</a>
 <a href="#" class="contact">contact</a>
 <img src="img/head 1.png" alt="head" class="loop">
 <pre class="pre1">
